tests/pos/T531.hs
module T531 where

{-@
data Foo = Foo { _getFoo :: Int }
@-}
data Foo = Foo { _getFoo :: Int }
